public/index.css
:root {
    --blueColor: #107896;
    --darkblueColor: #0b566b;
    --darkerblueColor: #094758;
    --OrangeColor: #c2571a;
    --yellowColor: #bca136;
    --greenColor: #829356;
    --redColor: #9a2617;
    --greyColor: #dddddd;
}

.columns {
    display: flex;
    margin-left: 150px;
    margin-right: 150px;
}

.columns div {
    flex: 1;
}

.column_center {
    order: 2;
}

body {
    text-align: center;
    color: var(--greyColor);
    font-family: "Exo", sans-serif;
    background-color: var(--blueColor);
}

button {
    background-color: var(--OrangeColor);
    color: var(--greyColor);
    padding: 5px;
    width: 100px;
    height: 40px;
    border-radius: 3px;
    border: 0;
    font-size: 18px;
}
button:active {
    background-color: var(--redColor);
    color: var(--greyColor);
}

.togglebutton {
    background-color: var(--darkblueColor);
    color: var(--greyColor);
    padding: 5px;
    width: 100%;
    height: 40px;
    border-radius: 3px;
    border: 0;
    font-size: 16px;
}
.togglebutton:active {
    background-color: var(--darkerblueColor);
    color: var(--greyColor);
}

.credit {
    text-decoration: none;
    color: var(--greyColor);
    margin-right: 100px;
    text-align: right;
}
/* unvisited link */
a:link {
    color: var(--greyColor);
}

/* visited link */
a:visited {
    color: var(--greyColor);
}

/* mouse over link */
a:hover {
    color: var(--greyColor);
}

/* selected link */
a:active {
    color: var(--greyColor);
}

/* The switch - the box around the slider */
.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

/* The slider */
.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: 0.4s;
    transition: 0.4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: 0.4s;
    transition: 0.4s;
}

input:checked + .slider {
    background-color: #2196f3;
}

input:focus + .slider {
    box-shadow: 0 0 1px #2196f3;
}

input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}
.tooltip {
    position: relative;
    display: inline-block;
}

.tooltip .tooltiptext {
    visibility: hidden;
    width: 200px;
    padding-left: 5px;
    padding-right: 5px;
    padding-top: 5px;
    padding-bottom: 5px;
    background-color: var(--greenColor);
    text-align: center;
    border-radius: 6px;
    /* padding: 5px 0; */
    position: absolute;
    z-index: 1;
    top: -5px;
    left: 110%;
}

.tooltip .tooltiptext::after {
    content: "";
    position: absolute;
    top: 50%;
    right: 100%;
    margin-top: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: transparent var(--greenColor) transparent transparent;
}
.tooltip:hover .tooltiptext {
    visibility: visible;
}

